<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

        <GridLayout
            android:id="@+id/GridLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="4"
            android:useDefaultMargins="true" >

            <TextView
                android:layout_column="0"
                android:layout_columnSpan="3"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:layout_row="0"
                android:text="@string/place"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/itemName"
                android:layout_column="0"
                android:layout_gravity="right"
                android:layout_row="1"
                android:text="@string/name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editName"
                android:layout_column="1"
                android:layout_columnSpan="1"
                android:layout_row="1"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/itemDescription"
                android:layout_column="0"
                android:layout_gravity="right"
                android:layout_row="2"
                android:text="@string/description"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editDescription"
                android:layout_column="1"
                android:layout_columnSpan="1"
                android:layout_row="2"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/address"
                android:layout_column="0"
                android:layout_gravity="right"
                android:layout_row="3"
                android:text="@string/address"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editAddress"
                android:layout_column="1"
                android:layout_columnSpan="1"
                android:layout_row="3"
                android:ems="10"
                android:inputType="text" />

            <Button
                android:id="@+id/addTag"
                android:layout_column="0"
                android:layout_row="4"
                android:text="@string/addTag" />

            <Spinner
                android:id="@+id/foundTags"
                android:layout_column="1"
                android:layout_row="4"
                android:entries="@array/ids" />

            <QuickContactBadge
                android:layout_column="0"
                android:layout_gravity="right"
                android:layout_row="5" />

            <Button
                android:id="@+id/cancel"
                android:layout_column="0"
                android:layout_row="6"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/save"
                android:layout_column="1"
                android:layout_row="6"
                android:text="@string/save" />
        </GridLayout>
</ScrollView>